作业修改图片地址

--- a/课后作业/Hive 作业 -0801 课后作业 v1.1/Hive 作业 -0801 课后作业 v1.1.md
+++ b/课后作业/Hive 作业 -0801 课后作业 v1.1/Hive 作业 -0801 课后作业 v1.1.md
@@ -11,7 +11,7 @@ create table t_movie
 
 
 ```
-[t_movie 数据准备](../resource/t_movie.csv)
+[t_movie 数据准备](../../resource/t_movie.csv)
 ### t_rating
 ```sql
 create  table t_rating
@@ -24,7 +24,7 @@ create  table t_rating
 
 
 ```
-[t_rating 数据准备](../resource/t_rating.csv)
+[t_rating 数据准备](../../resource/t_rating.csv)
 ### t_user
 ```sql
 CREATE TABLE t_user
@@ -36,7 +36,7 @@ CREATE TABLE t_user
     zipcode    string
 );
 ```
-[t_user 数据准备](../resource/t_user.csv)
+[t_user 数据准备](../../resource/t_user.csv)
 
 ## 题目一：
 
@@ -61,7 +61,7 @@ ORDER BY tu.age;
 ```
 
 ### 运行结果
-![](../resource/hive01.png)
+![](../../resource/hive01.png)
 
 ## 题目二：
 
@@ -91,7 +91,7 @@ LIMIT 10;
 ```
 
 ### 运行结果
-![](../resource/hive02.png)
+![](../../resource/hive02.png)
 
 ## 题目三
 > 找出影评次数最多的女士所给出最高分的10部电影的平均影评分，展示电影名和平均影评分（可使用多行SQL）
@@ -125,7 +125,7 @@ FROM (SELECT tr.movieid, AVG(tr.rate) AS avgrate
        LEFT JOIN t_movie tm ON c.movieid = tm.movieid
 ```
 ### 运行结果
-![](../resource/hive03.png)
+![](../../resource/hive03.png)
 
 基本SQL教程：
 - https://www.w3school.com.cn/sql/index.asp
@@ -340,11 +340,11 @@ INSERT INTO TABLE tb_test_format values('This notebook can be used to install ge
 
 **in hdfs**
 
-![](../resource/hive05.png)
+![](../../resource/hive05.png)
 
 **in hive**
 
-![](../resource/hive04.png)
+![](../../resource/hive04.png)
 
 
 ### 注册
